--- a/EmbarkToTalk/package.json
+++ b/EmbarkToTalk/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ionic-native/core": "^5.31.1",
+    "@ionic-native/http": "^5.31.1",
     "@ionic/angular": "^5.5.2",
     "ionic-angular": "^3.9.10",
     "rxjs": "~6.6.0",
@@ -38,6 +39,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-plugin-advanced-http": "^3.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
@@ -51,5 +53,10 @@
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-advanced-http": {}
+    }
+  }
 }
