--- a/EmbarkToTalk/package.json
+++ b/EmbarkToTalk/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/http": "^5.31.1",
     "@ionic/angular": "^5.6.3",
     "ionic-angular": "^3.9.10",
+    "ng-audio-recorder": "0.0.5",
     "ng-circle-progress": "^1.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
