--- a/EmbarkToTalk/package.json
+++ b/EmbarkToTalk/package.json
@@ -22,9 +22,11 @@
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/http": "^5.31.1",
     "@ionic/angular": "^5.6.3",
+    "get-audio-duration": "^2.0.3",
     "ionic-angular": "^3.9.10",
     "ng-audio-recorder": "0.0.5",
     "ng-circle-progress": "^1.6.0",
+    "ngx-ui-scroll": "^2.1.0-beta.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
